# claude-code-tools

./: .gitignore  CLAUDE.md  Makefile  README.md  jsonl-structure-summary.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: release-rust.yml
WORKLOG/: 20251122.md  20251123.md  20251124.md  20251125.md
claude_code_tools/: __init__.py  action_rpc.py  aichat.py  claude_continue.py  codex_continue.py  config.py  delete_session.py  env_safe.py  export_all.py  export_claude_session.py  export_codex_session.py  export_session.py  find_claude_session.py  find_codex_session.py  find_original_session.py  find_session.py  find_trimmed_sessions.py  gdoc2md.py  md2gdoc.py  node_menu_ui.py  search_index.py  session_lineage.py  session_menu.py  session_menu_cli.py  session_tui.py  session_utils.py  smart_trim.py  smart_trim_core.py  suppress_tool_results.py  suppress_tool_results_claude.py  suppress_tool_results_codex.py  tmux_cli_controller.py  tmux_remote_controller.py  trim_session.py  trim_session_claude.py  trim_session_codex.py
demos/: README.md  rollover_diagram.drawio  rollover_diagram_v3.drawio  smart_trim_diagram.drawio  trim_diagram.drawio  trim_diagrams.md
docs/: lmsh.md  lmshell.md  local-llm-setup.md  tmux-cli-instructions.md
hooks/: README.md  bash_hook.py  claude_md_block_hook.py  env_file_protection_hook.py  git_add_block_hook.py  git_checkout_safety_hook.py  git_commit_block_hook.py  kubectl_safety_hook.py  rm_block_hook.py  settings.sample.json  skill-rules.json  skill_activation_hook.py  smart-trim-hook.py  terraform_safety_hook.py  test_file_length_limit_hook.py
issues/: 004-20250817-lmshell-spec.md  012-20251123-filter-malformed-sessions.md  013-20251123-codex-partial-session-id.md  014-20251123-codex-clone-codex-home-arg.md  015-20251123-codex-clone-missing-args.md  016-20251123-enable-continue-for-codex.md  017-20251123-codex-continue-command.md  018-20251124-consolidate-commands.md  019-20251124-centralize-session-resolution.md  020-20251124-unify-session-display-style.md  021-20251124-unify-continue-behavior.md  20251114-smart-trim.md  20251122-continue-custom-prompt.md  20251122-node-ui-menu-implementation-plan.md  20251122-tmux-cli-pane-targeting.md  20251122-truncate-tool-results.md  20251123-4-further-nodeui-fixes.md  20251123-action-menu-bug.md  20251123-node-match-rich-ui-plan.md  20251123-node-match-rich-ui.md  20251123-node-ui-action-rpc.md  20251125-unify-trim-export-paths.md  20251127-readme-update-and-distribution.md
lmsh/: .gitignore  Cargo.toml
lmsh/src/: main.rs  shell.rs
lmshell/: Cargo.toml
lmshell/src/: main.rs  shell.rs
node_ui/: action_config.js  menu.js  package.json
plugins/aichat/: README.md
plugins/aichat/.claude-plugin/: plugin.json
plugins/aichat/agents/: session-searcher.md
plugins/aichat/commands/: aichat-resume.md  recover-context.md  rollover.md
plugins/aichat/hooks/: aichat_resume_hook.py  hooks.json
plugins/aichat/skills/recover-context/: SKILL.md
plugins/aichat/skills/session-search/: SKILL.md
plugins/safety-hooks/: README.md
plugins/safety-hooks/.claude-plugin/: plugin.json
plugins/safety-hooks/hooks/: bash_hook.py  command_utils.py  file_length_limit_hook.py  git_add_block_hook.py  git_checkout_safety_hook.py  git_commit_block_hook.py  hooks.json
plugins/session-search/: README.md
plugins/session-search/skills/session-search/: install.md
plugins/steeef-safety/: README.md
plugins/steeef-safety/.claude-plugin/: plugin.json
plugins/steeef-safety/hooks/: claude_md_block_hook.py  file_size_conditional_hook.py  git_branch_workflow_hook.py  hooks.json  kubectl_safety_hook.py  notification_hook.sh  skill-rules.json  skill_activation_hook.py  terraform_safety_hook.py
plugins/steeef-worktree-integration/hooks/: cleanup_hook.py  worktree_hook.py
plugins/tmux-cli/: README.md
plugins/tmux-cli/.claude-plugin/: plugin.json
plugins/tmux-cli/skills/tmux-cli/: SKILL.md
plugins/workflow/: README.md
plugins/workflow/.claude-plugin/: plugin.json
plugins/workflow/agents/: ui-tester.md
plugins/workflow/skills/code-walk-thru/: SKILL.md
plugins/workflow/skills/log-work/: SKILL.md
plugins/workflow/skills/make-issue-spec/: SKILL.md
rust-search-ui/: Cargo.toml
rust-search-ui/src/: main.rs
scripts/: aichat-search.rb.template  delete_helper_sessions.py  fcs-codex-function.sh  fix_session_metadata.py  fs-function.sh  statusline.sh  update-homebrew-formula.sh  verify_unique_session_ids.py
tests/: __init__.py  test_aichat_search_truncate.py  test_codex_clone_codex_home.py  test_command_utils.py  test_continue_flow.py  test_export_all.py  test_export_yaml.py  test_find_session_filtering.py  test_find_sessions.py  test_node_ui_integration.py  test_search_import.py  test_search_index.py  test_session_id_consistency.py  test_session_id_resolution.py  test_session_resolution.py  test_sidechain_sessions.py  test_smart_trim.py  test_smart_trim_hook.py  test_tmux_cli_controller.py  test_trim_session.py
tests/fixtures/: claude_session.jsonl  codex_session.jsonl
