[project]
name = "claude-code-tools"
version = "0.2.7"
description = "Collection of tools for working with Claude Code"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.6",
    "click>=8.0.0",
    "fire>=0.5.0",
    "mcp>=1.13.0",
    "pytest>=9.0.1",
    "rich>=13.0.0",
    "textual>=0.47.0",
]

[project.optional-dependencies]
dev = ["commitizen>=3.0.0"]

[project.scripts]
# Unified session management interface (RECOMMENDED)
aichat = "claude_code_tools.aichat:main"

# Legacy flat commands (backward compatible)
find-claude-session = "claude_code_tools.find_claude_session:main"
find-codex-session = "claude_code_tools.find_codex_session:main"
find-session = "claude_code_tools.find_session:main"
find-original-session = "claude_code_tools.find_original_session:main"
find-derived-sessions = "claude_code_tools.find_derived_sessions:main"
session-menu = "claude_code_tools.session_menu_cli:main"
trim-session = "claude_code_tools.trim_session:main"
smart-trim = "claude_code_tools.smart_trim:main"
export-claude-session = "claude_code_tools.export_claude_session:main"
export-codex-session = "claude_code_tools.export_codex_session:main"
delete-session = "claude_code_tools.delete_session:main"
claude-continue = "claude_code_tools.claude_continue:main"

# Non-session utilities
vault = "claude_code_tools.dotenv_vault:main"
tmux-cli = "claude_code_tools.tmux_cli_controller:main"
env-safe = "claude_code_tools.env_safe:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "claude_code_tools/**/*.py",
    "docs/*.md",
    "node_ui/menu.js",
    "node_ui/package.json",
]
exclude = [
    "demos/",
    "*.mp4",
    "*.gif",
    "*.screenstudio/",
    ".claude/",
    "claude-code-router/",
    "reference/",
    "ghostty",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (require API calls)",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.7"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "claude_code_tools/__init__.py:__version__"
]
update_changelog_on_bump = false
