[package]
name = "lmsh"
version = "0.0.1"
edition = "2021"
description = "Lightning-fast natural language shell - translate natural language to shell commands"
license = "MIT"
repository = "https://github.com/pchalasani/claude-code-tools"
homepage = "https://github.com/pchalasani/claude-code-tools/tree/main/lmsh"
readme = "../docs/lmsh.md"
keywords = ["shell", "cli", "natural-language", "claude", "ai"]
categories = ["command-line-utilities"]

[dependencies]
# Keep dependencies minimal; disable heavy defaults.
rustyline = { version = "12", default-features = false, features = ["with-file-history"] }
portable-pty = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
