[package]
name = "session_search"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Search
tantivy = "0.25"

# Utilities
anyhow = "1"
chrono = "0.4"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
