[package]
name = "aichat-search"
version = "0.1.21"
edition = "2021"
description = "Fast full-text search TUI for Claude Code and Codex sessions using Tantivy"
license = "MIT"
repository = "https://github.com/pchalasani/claude-code-tools"
homepage = "https://github.com/pchalasani/claude-code-tools/tree/main/rust-search-ui"
readme = "../README.md"
keywords = ["claude", "codex", "search", "tui", "tantivy"]
categories = ["command-line-utilities"]

[[bin]]
name = "aichat-search"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Search
tantivy = "0.25"

# Utilities
anyhow = "1"
arboard = "3"  # Clipboard support
chrono = "0.4"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
